<resources>
    <string name="about_panel">Pro settings</string>
    <string name="accept">Accept</string>
    <string name="accessibility_declaration">[MyGesture] uses the AccessibilityServices API primarily for the following functions:\n\n1. Display the trigger area at the edge of the screen on the application overlay, and perform ations such as BACK, HOME, and RECENTS when the user touches it, so as to help the user operate the phone with one hand.\n2. Record recently opened applications to help users quickly switch to recently used applications.\n\nAccept to continue, refuse to quit.</string>
    <string name="accessibility_description">MyGesture uses accessibility service to monitor BACK, HOME, RECENT buttons.</string>
    <string name="accessibility_permission">MyGesture requires Accessibility service permission</string>
    <string name="accessibility_text">Accessibility service</string>
    <string name="acode_backup_tip">\n(Attention：you need backup active code by yourself)</string>
    <string name="actions">Actions</string>
    <string name="active_code">KEY</string>
    <string name="active_tip">Activated！</string>
    <string name="actived_pro">Unlocked!</string>
    <string name="all_edge_disable_tips">Require one edge enabled at least</string>
    <string name="app_name">MyGesture</string>
    <string name="apps_drawer_manager">Apps drawer manager</string>
    <string name="apps_drawer_text">Apps drawer</string>
    <string name="area_height_text">Trigger zone height</string>
    <string name="area_width_text">Trigger zone width</string>
    <string name="attention">Attention</string>
    <string name="back_text">BACK</string>
    <string name="backup_failed">Backup failed</string>
    <string name="backup_key_failed_tip">Backup active code failed, please backup it by yourself.</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="backup_settings_to_storage">Backup settings</string>
    <string name="backup_succeed">Backup succeed</string>
    <string name="backup_text">Backup</string>
    <string name="backup_tip">Please backup the activate code first.</string>
    <string name="backup_tips">***Backup your key first***</string>
    <string name="backup_to_wechat_tip">Tried backup,please check it in WeChat-[Me]-[Favorites].If failed, please backup it by yourself.</string>
    <string name="bluetooth30_off_tip">Will turn off bluetooth at %s</string>
    <string name="bluetooth30_on_tip">Will turn on bluetooth at %s</string>
    <string name="bluetooth_off">Bluetooth OFF</string>
    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="blur_android12">Only for android s or above,also require GPU supported.</string>
    <string name="blur_back_tips">\nRequire capture screen permission.</string>
    <string name="blur_behind">Blur behind(android s+)</string>
    <string name="bottom_home_tips">↑HOME</string>
    <string name="bottom_recent_tips">↑RECENTS</string>
    <string name="bottom_side_text">Bottom edge</string>
    <string name="bottom_swipe_left">Bottom edge swipe left</string>
    <string name="bottom_swipe_right">Bottom edge swipe right</string>
    <string name="breath_count_text">Lights lighting count</string>
    <string name="breath_hide_text">Hide notification content on ambient display(Pro)</string>
    <string name="breath_light">Notification extension</string>
    <string name="breath_on_lock_text">Ambient display while new notification(Pro)</string>
    <string name="breath_random_color_text">Colorful lights</string>
    <string name="breath_setting_tip">You should set Show light apps to make it works</string>
    <string name="breath_white_list_text">Show lights apps</string>
    <string name="buy_pro">Unlock/recover pro features</string>
    <string name="can_not_add_this">Can not add this.</string>
    <string name="can_not_add_to_panel">Can not add to panel</string>
    <string name="cancel_text">Cancel</string>
    <string name="cannot_active_pro">Cannot active pro features?</string>
    <string name="cannot_open_tip">If you can not open the web, please update MyGesture to newest version.</string>
    <string name="cannotaddtotouchbar_tips">Can not add to touch bar action</string>
    <string name="change_icon_text">Change icon</string>
    <string name="check_again">Please check again.</string>
    <string name="checking_text">Please waiting…</string>
    <string name="click">Click</string>
    <string name="click_to_cancel">Click to cancel</string>
    <string name="click_to_copy">(long click to copy)</string>
    <string name="click_to_exit_handy_mode">HANDY MODE</string>
    <string name="click_touch_bar">Click touch bar</string>
    <string name="close">Exit</string>
    <string name="color_egg_text">Feedback animations tuner</string>
    <string name="color_setting_alpha">Alpha:</string>
    <string name="colorful_touch_bar">Colorful touch bar</string>
    <string name="compat_home">Compatible with home button</string>
    <string name="copy_text">Copy</string>
    <string name="copyed_sn">Copied：</string>
    <string name="count_format" formatted="false">Started %d hours, swiped %d times</string>
    <string name="crash_info">Crash log</string>
    <string name="crash_log_text">Crash log</string>
    <string name="crash_restart_text">Error</string>
    <string name="custom_image">Custom Image</string>
    <string name="declaration_accessibility_title">Declaration of use The AccessibilityService API</string>
    <string name="delete_screen_picture_tip">The screen picture is deleted</string>
    <string name="delete_text">Delete</string>
    <string name="device_code">IMEI</string>
    <string name="dialer_enter_tips">Please enter (*#06#) in dialer than click fetch button on right side.</string>
    <string name="dialer_enter_tips_simple">Please enter (*#06#) in the dialer</string>
    <string name="disable_gesture_on_lock_screen">Disable gesture on lock screen</string>
    <string name="draw_long_click">Long press app to run window mode(Require system supported)</string>
    <string name="edge_anim_text">Feedback animation</string>
    <string name="edge_shadow_random_color_text">Random colors for feedback animation</string>
    <string name="edge_shadow_setting">Feedback animations color&amp;size tuner</string>
    <string name="edge_visible_tips">Visible trigger zone</string>
    <string name="empty_text">&lt; Empty &gt;\nTo add apps in \"pro setting\" - \"Apps drawer manager\"</string>
    <string name="enable_gesture_first">Please enable gesture first.</string>
    <string name="error_try_again">Service error, please try again later.</string>
    <string name="ex_panel_text">Extension panel</string>
    <string name="extension_text">Extension</string>
    <string name="eyes_care_on">Eyes care on</string>
    <string name="fetch">Fetch</string>
    <string name="fetch_imei_tips1">Click Fetch button to get IMEI and MEID</string>
    <string name="fetch_imei_tips2">Please confirm and select.</string>
    <string name="fetch_imei_tips3">No IMEI in this screen，enter in to (Status info - IMEI) than click fetch button</string>
    <string name="float_ball">Float ball</string>
    <string name="float_ball_draggable">Float ball draggable</string>
    <string name="float_ball_draggable_tip">Slow gestures and long click of float ball is disabled when draggable is on.</string>
    <string name="float_ball_img">Float ball image</string>
    <string name="float_ball_img_set">Click to select\nLong click to reset</string>
    <string name="folder_bkg">Folder background</string>
    <string name="force_round_icon">Force round icon</string>
    <string name="fore_service">fore_service</string>
    <string name="gestrue_closed">Gesture is off , you can restart it form the notification</string>
    <string name="gesture_area_text">Actions &amp; triggers</string>
    <string name="gesture_black_summary">Stop gestures on selected apps</string>
    <string name="gesture_blacklist">Gesture blacklist</string>
    <string name="gesture_closed">MyGesture is off</string>
    <string name="gesture_switch_text">Gesture enabled</string>
    <string name="gesture_url">https://www.coolapk.com/apk/203549</string>
    <string name="go_grant_text">Setting</string>
    <string name="go_leave_msg">Details</string>
    <string name="go_setting_text">Setting</string>
    <string name="goto_active">Detail</string>
    <string name="guide_setting_text">Help</string>
    <string name="guide_title_text">MY GESTURE GUIDE</string>
    <string name="hands_up_text">Hands up mode</string>
    <string name="hands_up_tips">\nTips: You are now in [Hands up mode]. In this mode ,gesture operations has big changes. \n\n# Swipe gestures will trigger after finger leaves the screen, also you can swipe and hold to trigger [Slow swipe] gestures. \n\n# Some features like [App switcher]、[Four in one]、[Media volume]、[Screen brightness] will require twice swipe to work. You can set them to [Slow swipe] gestures and turn on [Trigger slow swipe actions on time out].</string>
    <string name="height_text">Height:</string>
    <string name="hide_me_text">Hide MyGesture from recents</string>
    <string name="hide_touch_bar_when_landscape">Hide touch bar when landscape</string>
    <string name="hide_trigger_zone_for_1_second_when_click">Hide trigger zone for 1 second when click it</string>
    <string name="hide_when_soft_input_text">Avoid from covering virtual keyboard</string>
    <string name="home_anim">Transition animation for HOME</string>
    <string name="home_text">HOME</string>
    <string name="i_know">I know</string>
    <string name="icon_only_in_switch_list">Icon only in switch list</string>
    <string name="icon_pack_for_apps_drawer">Icon pack for apps drawer</string>
    <string name="ignore_battery_op">Please set MyGesture ignore battery optimization.</string>
    <string name="item">Item</string>
    <string name="keep_screen_on_canceled">Keep screen on canceled</string>
    <string name="keep_screen_on_on">Keeping screen on</string>
    <string name="keywords_filter">Keywords filter</string>
    <string name="keywords_filter_tip">Split keywords by \" , \"</string>
    <string name="leave_msg_text">Rate and update</string>
    <string name="left_hand_text">Default\ngestures</string>
    <string name="left_side_text">Left edge</string>
    <string name="left_tips">↑BACK\t\t\t→NOTIFICATIONS</string>
    <string name="light_panel_theme">Light panel theme</string>
    <string name="limited_tips">Can not add this shortcut</string>
    <string name="locked_text">Sorry!You must unlock it first.</string>
    <string name="long_click">Long click</string>
    <string name="long_click_touch_bar">Long click touch bar</string>
    <string name="long_press_time">Slow swipe time(ms)：</string>
    <string name="low_alpha_tip">Lower alpha will affect the visible</string>
    <string name="m_engine">Use system default vibrate</string>
    <string name="m_plus_tips">Need android 6.0+</string>
    <string name="position_x">Position X:</string>
    <string name="position_y">Position Y:</string>
    <string name="right_tips">↓BACK\t\t\t→NOTIFICATIONS</string>
    <string name="select_text">Select</string>
    <string name="size">Size:</string>
    <string name="slow_swipe_down">Slow swipe down</string>
    <string name="slow_swipe_left">Slow swipe left</string>
    <string name="slow_swipe_right">Slow swipe right</string>
    <string name="slow_swipe_up">Slow swipe up</string>
    <string name="swipe_down_text">Swipe down</string>
    <string name="swipe_left_text">Swipe left</string>
    <string name="swipe_right_text">Swipe right</string>
    <string name="swipe_up_text">Swipe up</string>
    <string name="tips">1.Grant necessary permissions\n2.Keep app running on background\n3.Custom the gesture features you want\n4.Tips:double click the triggers to click the item under the triggers</string>
</resources>