<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/float_ball_custom"
    android:paddingTop="10dp"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="10dp">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swipe_left_text"
            android:layout_weight="1"/>
        <TextView
            android:textColor="?attr/theme_accent_color"
            android:gravity="end"
            android:id="@+id/f_l_key"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swipe_right_text"
            android:layout_weight="1"/>
        <TextView
            android:textColor="?attr/theme_accent_color"
            android:gravity="end"
            android:id="@+id/f_r_key"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swipe_up_text"
            android:layout_weight="1"/>
        <TextView
            android:textColor="?attr/theme_accent_color"
            android:gravity="end"
            android:id="@+id/f_u_key"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swipe_down_text"
            android:layout_weight="1"/>
        <TextView
            android:textColor="?attr/theme_accent_color"
            android:gravity="end"
            android:id="@+id/f_d_key"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/slow_swipe_left"
            android:layout_weight="1"/>
        <TextView
            android:textColor="?attr/theme_accent_color"
            android:gravity="end"
            android:id="@+id/s_f_l_key"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/slow_swipe_right"
            android:layout_weight="1"/>
        <TextView
            android:textColor="?attr/theme_accent_color"
            android:gravity="end"
            android:id="@+id/s_f_r_key"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/slow_swipe_up"
            android:layout_weight="1"/>
        <TextView
            android:textColor="?attr/theme_accent_color"
            android:gravity="end"
            android:id="@+id/s_f_u_key"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/slow_swipe_down"
            android:layout_weight="1"/>
        <TextView
            android:textColor="?attr/theme_accent_color"
            android:gravity="end"
            android:id="@+id/s_f_d_key"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:layout_weight="1"/>
        <TextView
            android:textColor="?attr/theme_accent_color"
            android:gravity="end"
            android:id="@+id/f_click_key"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/long_click"
            android:layout_weight="1"/>
        <TextView
            android:textColor="?attr/theme_accent_color"
            android:gravity="end"
            android:id="@+id/f_long_click_key"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/position_x"
            android:layout_weight="1"/>
        <SeekBar
            android:id="@+id/float_ball_x_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="1000"
            android:layout_weight="4"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/position_y"
            android:layout_weight="1"/>
        <SeekBar
            android:id="@+id/float_ball_y_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="1000"
            android:layout_weight="4"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:layout_weight="1"/>
        <SeekBar
            android:id="@+id/float_ball_size_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:layout_weight="3"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/float_ball_img"
            android:layout_weight="1"/>
        <TextView
            android:textColor="?attr/theme_accent_color"
            android:gravity="end"
            android:id="@+id/f_custom_img"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/float_ball_img_set"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:textColor="?attr/theme_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/float_ball_draggable"
            android:layout_weight="1"/>
        <Switch
            android:gravity="end"
            android:id="@+id/f_draggable_switch"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
