<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="?attr/theme_background_color"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:textColor="?attr/theme_accent_color"
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_title_text"/>
        <TextView
            android:textColor="?attr/theme_text_color"
            android:id="@+id/guide_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tips"
            android:layout_below="@+id/title_text"
            android:textIsSelectable="true"/>
        <RelativeLayout
            android:gravity="center"
            android:id="@+id/phone_layout"
            android:background="@drawable/round_shape"
            android:padding="10dp"
            android:layout_width="200dp"
            android:layout_height="400dp"
            android:layout_below="@+id/guide_test"
            android:layout_centerHorizontal="true"
            android:elevation="10dp">
            <View
                android:background="@drawable/round_shape2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="?attr/theme_text_color"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_hand_text"
                android:layout_centerInParent="true"/>
            <TextView
                android:textSize="10dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@color/tran_black"
                android:layout_width="180dp"
                android:layout_height="14dp"
                android:layout_marginBottom="210dp"
                android:text="@string/left_tips"
                android:layout_alignParentBottom="true"
                android:transformPivotX="0dp"
                android:transformPivotY="14dp"
                android:rotation="90"/>
            <TextView
                android:textSize="10dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@color/tran_black"
                android:layout_width="180dp"
                android:layout_height="14dp"
                android:layout_marginBottom="15dp"
                android:text="@string/right_tips"
                android:layout_alignParentBottom="true"
                android:transformPivotX="180dp"
                android:transformPivotY="0dp"
                android:rotation="90"/>
            <TextView
                android:textSize="10dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@color/tran_black"
                android:layout_width="89dp"
                android:layout_height="14dp"
                android:text="@string/bottom_home_tips"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:textSize="10dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@color/tran_black"
                android:layout_width="89dp"
                android:layout_height="14dp"
                android:text="@string/bottom_recent_tips"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <View
            android:id="@+id/btn_1"
            android:background="@drawable/btn_shape"
            android:layout_width="2dp"
            android:layout_height="40dp"
            android:layout_marginTop="70dp"
            android:layout_below="@+id/guide_test"
            android:layout_toEndOf="@+id/phone_layout"/>
        <View
            android:background="@drawable/btn_shape"
            android:layout_width="2dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btn_1"
            android:layout_toEndOf="@+id/phone_layout"/>
        <TextView
            android:textColor="?attr/theme_text_color"
            android:gravity="center"
            android:background="@drawable/wave_bkg"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/i_know"
            android:layout_below="@+id/phone_layout"
            android:layout_centerHorizontal="true"
            android:onClick="iKnow"/>
    </RelativeLayout>
</ScrollView>
