<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/fetch_view_layout"
    android:background="@color/trans_green"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/green"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/white"
            android:id="@+id/fetch_tips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fetch_imei_tips1"
            android:layout_weight="1"/>
        <TextView
            android:textColor="@color/text_color_light"
            android:id="@+id/fetch_btn"
            android:background="@drawable/white_menu_bkg"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetch"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:textColor="@color/text_color_light"
            android:id="@+id/exit_btn"
            android:background="@drawable/white_menu_bkg"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>
</LinearLayout>
